game/static/css/style.css
#headline {
text-align: center;
padding: 50px 0px;
}

#headline p {
color: #999;
}

h1 {
font-size: 6em;
font-family: 'Chango', cursive;
margin-bottom: 20px;
margin-top: 15px;
}

#content_box {
background-color: #eee;
border: 1px solid #bbb;
border-radius: 20px;
-webkit-border-radius: 20px;
-moz-border-radius: 20px;
box-shadow: 2px 2px 1px #eee;
}

#index_canvas {
border: 1px solid red;
height: 189px;
margin: 5px 0px;
}

#form_box {
text-align: center;
}

#login_form {
margin-top: 50px;
}

label {
margin-bottom: -10px;
}

#player_list {
margin-bottom: 20px;
width: 100%;
border: 1px solid #bbb; 
text-align: left;
}

#player_list p {
margin: 10px;
}

#player_list ul {
margin: 10px 30px;
font-weight: bold;
}

#game_list {
width: 100%;
border: 1px solid #bbb; 
text-align: left;
margin-bottom: 20px;
}

#game_list p {
margin: 10px;
}

#game_list ul {
margin: 10px 30px;
font-weight: bold;
}

#game_list ul span {
display: inline-block;
width: 270px;
}

#game_name {
font-weight: bold;
}

#joined_game_info {
text-align: center;
padding-top: 10px; 
}

.error {
color: #f00;
margin-bottom: 0px;
}

.sprite {
height: 42px;
width: 42px;
visibility: hidden;
position: absolute;
top: 1px;
left: 1px;
}

